; ModuleID = '/home/carl/AnghaBench/openwrt/target/linux/ath79/files/drivers/net/ethernet/atheros/ag71xx/extr_ag71xx_debugfs.c_ag71xx_debugfs_root_init.c'
source_filename = "/home/carl/AnghaBench/openwrt/target/linux/ath79/files/drivers/net/ethernet/atheros/ag71xx/extr_ag71xx_debugfs.c_ag71xx_debugfs_root_init.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@ag71xx_debugfs_root = common dso_local global i64 0, align 8
@EBUSY = common dso_local global i32 0, align 4
@KBUILD_MODNAME = common dso_local global i32 0, align 4
@ENOENT = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @ag71xx_debugfs_root_init() #0 {
  %1 = alloca i32, align 4
  %2 = load i64, i64* @ag71xx_debugfs_root, align 8
  %3 = icmp ne i64 %2, 0
  br i1 %3, label %4, label %7

4:                                                ; preds = %0
  %5 = load i32, i32* @EBUSY, align 4
  %6 = sub nsw i32 0, %5
  store i32 %6, i32* %1, align 4
  br label %16

7:                                                ; preds = %0
  %8 = load i32, i32* @KBUILD_MODNAME, align 4
  %9 = call i64 @debugfs_create_dir(i32 %8, i32* null)
  store i64 %9, i64* @ag71xx_debugfs_root, align 8
  %10 = load i64, i64* @ag71xx_debugfs_root, align 8
  %11 = icmp ne i64 %10, 0
  br i1 %11, label %15, label %12

12:                                               ; preds = %7
  %13 = load i32, i32* @ENOENT, align 4
  %14 = sub nsw i32 0, %13
  store i32 %14, i32* %1, align 4
  br label %16

15:                                               ; preds = %7
  store i32 0, i32* %1, align 4
  br label %16

16:                                               ; preds = %15, %12, %4
  %17 = load i32, i32* %1, align 4
  ret i32 %17
}

declare dso_local i64 @debugfs_create_dir(i32, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
